# crypto-tui

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/analysis/: frequency.py  kasiski.py
app/ciphers/: caesar.py  polybius.py  vigenere.py
app/services/: cipher_service.py  file_service.py
app/ui/: textual_app.py
docs/: architecture.md  project.md  user_guide.md
test_data/: encrypted_caesar.txt  encrypted_polybius.txt  encrypted_vigenere.txt  output_caesar.txt  plain_long.txt  plain_short.txt
tests/integration/: test_file_cipher.py  test_pipeline.py
tests/unit/: test_caesar.py  test_frequency.py  test_kasiski.py  test_polybius.py  test_vigenere.py
